# MiniCmakeDemoLib

./: .gitignore  CMakeLists.txt  README.md  library.h  vcpkg.json
cmake/: CXX1x.cmake  DefinePlatformSpecifc.cmake  Module.cmake  PocoMacros.cmake
modules/: MiniCmakeDemoLib.cpp  MiniCmakeDemoLib.h
modules/Add/: CMakeLists.txt
modules/Add/cmake/: MiniCmakeDemoLibAddConfig.cmake
modules/Add/include/MiniCmakeDemoLib/add/: library.h
modules/Add/src/: library.cpp
modules/Add/tests/: main.cpp
modules/Core/: CMakeLists.txt
modules/Core/cmake/: MiniCmakeDemoLibCoreConfig.cmake
modules/Core/include/MiniCmakeDemoLib/core/: coreexport.h  library.h
modules/Core/samples/: CMakeLists.txt  main.cpp
modules/Core/src/: library.cpp
modules/Core/tests/: CMakeLists.txt
modules/add/: CMakeLists.txt
modules/add/include/MiniCmakeDemoLib/add/: library.h
modules/add/src/: library.cpp
modules/core/: CMakeLists.txt
modules/core/cmake/: PocoCoreConfig.cmake
modules/core/include/MiniCmakeDemoLib/core/: library.h
modules/core/src/: library.cpp
samples/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
